Replace WireMock/mitmproxy with in-process Rift mock engine